[tool.poetry]
name = "ChainPilot"
version = "0.1.0"
description = "An onchain AI agent"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
spacy = "^3.8.5"
python-dotenv = "^1.0.1"
coinbase-agentkit = "^0.4.0"
openai-agents = ">=0.0.6,<0.0.7"
coinbase-agentkit-openai-agents-sdk = "0.3.0"
openai = ">=1.66.5"  # Updated version
agentkit = "^0.0.2"
cdp = "^0.0.2"

[tool.poetry.scripts]
start-agent = "chatbot:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
