[project]
name = "chainpilot"
version = "0.1.0"
description = "ai agent"
authors = [
    {name = "Your Name", email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "web3>=6.0.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
# CDP commented out for local testing
# cdp = "^0.2.0"